Use Java 17 language features (#1681)
* Use Java 17 language features

instanceof pattern matching

Formatted strings

* Remove OpenRewrite config from pom

* Use formatted strings more widely

No need to concatenate a string then use a formatted string for the rest