@@ -13,6 +13,7 @@ import org.kohsuke.stapler.StaplerRequest2;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.io.IOException;
+import java.io.Serial;
 import java.net.URL;
 
 /**
@@ -20,6 +21,7 @@ import java.net.URL;
  */
 public class Phabricator extends GitRepositoryBrowser {
 
+    @Serial
     private static final long serialVersionUID = 1L;
 
     private final String repo;
@@ -44,7 +46,7 @@ public class Phabricator extends GitRepositoryBrowser {
      */
     @Override
     public URL getChangeSetLink(GitChangeSet changeSet) throws IOException {
-        return new URL(getUrl(), String.format("/r%s%s", this.getRepo(), changeSet.getId()));
+        return new URL(getUrl(), "/r%s%s".formatted(this.getRepo(), changeSet.getId()));
     }
 
     /**
@@ -61,7 +63,7 @@ public class Phabricator extends GitRepositoryBrowser {
     public URL getDiffLink(Path path) throws IOException {
         final GitChangeSet changeSet = path.getChangeSet();
         final String sha = changeSet.getId();
-        final String spec = String.format("/diffusion/%s/change/master/%s;%s", this.getRepo(), path.getPath(), sha);
+        final String spec = "/diffusion/%s/change/master/%s;%s".formatted(this.getRepo(), path.getPath(), sha);
         return new URL(getUrl(), spec);
     }
 
@@ -77,7 +79,7 @@ public class Phabricator extends GitRepositoryBrowser {
     public URL getFileLink(Path path) throws IOException {
         final GitChangeSet changeSet = path.getChangeSet();
         final String sha = changeSet.getId();
-        final String spec = String.format("/diffusion/%s/history/master/%s;%s", this.getRepo(), path.getPath(), sha);
+        final String spec = "/diffusion/%s/history/master/%s;%s".formatted(this.getRepo(), path.getPath(), sha);
         return encodeURL(new URL(getUrl(), spec));
     }
 
